// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error type renders correctly 1`] = `
<div
  className="css-17phpfv"
>
  Error alert
</div>
`;

exports[`success type renders correctly 1`] = `
<div
  className="css-mvhet9"
>
  Success alert
</div>
`;
